tests/ui/try_transmute_mut-src-not-intobytes.nightly.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:22:40
    |
 22 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Src`
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:13:1
    |
 13 | struct Src;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Src`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 67 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs:792:26
    |
790 |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
791 |     where
792 |         Src: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:22:40
    |
 22 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `FromBytes` is not implemented for `Dst`
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:17:1
    |
 17 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(FromBytes)]` to `Dst`
    = help: the following other types implement trait `FromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 79 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs:793:14
    |
790 |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
793 |         Dst: FromBytes + IntoBytes,
    |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:22:40
    |
 22 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Dst`
   --> $DIR/try_transmute_mut-src-not-intobytes.rs:17:1
    |
 17 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Dst`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 67 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs:793:26
    |
790 |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
793 |         Dst: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
